vlib/v/parser/tests/embed_file_evaluated_but_not_used_in_dump.out
vlib/v/parser/tests/embed_file_evaluated_but_not_used_in_dump.vv:2:2: error: expression evaluated but not used
    1 | fn main() {
    2 |     '' == dump($embed_file(@FILE).path)
      |     ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
    3 | }
