vlib/v/parser/tests/embed_file_evaluated_but_not_used_in_dump.vv
fn main() {
	'' == dump($embed_file(@FILE).path)
}
